[project]
name = "social-media-analysis"
version = "0.1.0"
description = "Course materials for social media analysis"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
docs = []

[dependency-groups]
docs = [
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.7.0",
]
